--- a/static/cycle_angelo_css.css
+++ b/static/cycle_angelo_css.css
@@ -59,7 +59,7 @@
             padding: 2em 2em 2em 2em;
         }
         #space{
-                padding: 2em 2em 2em 2em;
+                padding: 1em 1em 1em 1em;
             }
 
         #index_posts{
@@ -94,6 +94,13 @@
         #profile_picture img{
             margin-left: 10px ;
             margin-top: 10px ;
+            margin-bottom: 10px ;
+            height: 10vh;
+            width: 10vh;
+        }
+
+        #user_post{
+            background-color: #ced4de;
         }
 
         /*For individual post page*/
@@ -123,15 +130,5 @@
             text-align: center;
         }
 
-        /*For login page*/
-        #id_username{
-            width: 50%;
-        }
+        /*For add post page*/
 
-        #id_password{
-            width: 50%;
-        }
-
-        #login_btn{
-            width: 50%
-        }
