--- a/templates/cycle_angelo/post.html
+++ b/templates/cycle_angelo/post.html
@@ -26,7 +26,7 @@
 
 
 	{% block body_block %}
-	<div id="posts">
+	<div id="unique_post">
 		{% if post %}
 			<br />
 		    	<h2 id="post_title"><u>{{ post.title }}</u></h1>
@@ -35,16 +35,12 @@
 
 </div>
 
-<div id="posts">
+<div id="unique_post_comments">
 
 
 		    {% if comments %}
 		    <br />
-		        <h2 id="comment_title"><u>Comments</u></h2>
-		        {% if user.is_authenticated %}
-		        <a href="{% url 'cycle_angelo:add_comment' post.slug %}" id="comment_link">Add Comment</a> <br/>
-		    {% endif %}
-		    
+		        <h2 id="comment_title"><u>Comments</u></h2>    
 		        <ul id="post_comments">
 		        	{% for comment in comments %}
 		        	<li>{{ comment.content }}</li>
@@ -54,11 +50,17 @@
 		    {% else %}
 		        <strong> No comments currently on this post.</strong>
 		    {% endif %}
+
+		    {% if user.is_authenticated %}
+		        <a href="{% url 'cycle_angelo:add_comment' post.slug %}" id="comment_link">Add Comment</a> <br/>
+		    {% endif %}
+
 		    
 		{% else %}
 		    The post you are looking for does not exist.
 			<a href="{% url 'cycle_angelo:index' %}">Return to the home page</a>
 		{% endif %}
+
 	</div>
 
 	{% endblock %}
