--- a/templates/cycle_angelo/post.html
+++ b/templates/cycle_angelo/post.html
@@ -43,7 +43,7 @@
 		        <h2 id="comment_title"><u>Comments</u></h2>    
 		        <ul id="post_comments">
 		        	{% for comment in comments %}
-		        	<li>{{ comment.content }}</li>
+		        	<li>{{ comment.user }} replied: {{ comment.content }}</li>
 		        	{% endfor %}
 		        	
 		        </ul>
@@ -52,7 +52,19 @@
 		    {% endif %}
 
 		    {% if user.is_authenticated %}
-		        <a href="{% url 'cycle_angelo:add_comment' post.slug %}" id="comment_link">Add Comment</a> <br/>
+		        <form id="comment_form" method="post">
+
+		{% csrf_token %}
+		{% for hidden in form.hidden_fields %}
+		    {{ hidden }}
+		{% endfor %}
+		{% for field in form.visible_fields %}
+		    {{ field.errors }}
+		    {{ field.help_text }}
+		    {{ field }}
+		{% endfor %}
+
+		<input type="submit" name="submit" value="Create Comment" />
 		    {% endif %}
 
 		    
