Test updates + Population updates

--- a/templates/cycle_angelo/contact_us.html
+++ b/templates/cycle_angelo/contact_us.html
@@ -38,7 +38,7 @@
           </ul>
         <li>Lucas Clement</li>
           <ul>
-            <li><a href="mailto:2745633c@student.gla.ac.uk">mailto:2745633c@student.gla.ac.uk</a></li>
+            <li><a href="mailto:2745633c@student.gla.ac.uk">2745633c@student.gla.ac.uk</a></li>
             <li><a href=https://github.com/lclement27>Lucas's Github</a></li>
           </ul>
         <li>Hamish Clark</li>
