--- a/templates/cycle_angelo/profile_registration.html
+++ b/templates/cycle_angelo/profile_registration.html
@@ -5,12 +5,11 @@
     Register - Set up your profile
 {% endblock %}
 
+{% block sub_heading %}
+Register - Step 2
+{% endblock %}
+
 {% block body_block %}
- <div class="jumbotron p-4">
-     <div class="container">
-        <h1 class="jumbotron-heading">Register - Step 2</h1>
-    </div>
- </div>
 
  <div class="container">
     <div class="row">
