--- a/templates/cycle_angelo/base.html
+++ b/templates/cycle_angelo/base.html
@@ -123,26 +123,21 @@
                     <div id ="chain_line"></div>
                     </header>
 
-                    <div>
 
-                     <h2 id="sub_heading">
-                            <div class="jumbotron p-4">
-                             <div class="container">
+                    <div class="jumbotron p-4">
+                        <div class="container">
                             <h1 class="jumbotron-heading">
                                 {% block sub_heading %}
                                 Base Template
                                 {% endblock %}
-                            </div>
-                            </div>
-
-                     </h2>
-
+                            </h1>
+                        </div>
                     </div>
-                    <div id="body_block">
+
+                    <div id="body_block" style="background-color: #aacaf0">
                         {% block body_block %}
                         {% endblock %}
                     </div>
-
 
 
                     <!-- FOOTER -->
