--- a/templates/cycle_angelo/contact_us.html
+++ b/templates/cycle_angelo/contact_us.html
@@ -14,7 +14,7 @@
 
 <body>
 	{% block sub_heading %}
-    Thank you for visiting our page! Here are the creators:
+    Thank you for visiting Cycle Angelo! Here are the creators:
 	{% endblock %}
 
   {% block body_block %}
