--- a/templates/cycle_angelo/base.html
+++ b/templates/cycle_angelo/base.html
@@ -22,9 +22,10 @@
     </head>
 
     <body>
+    <div class="wrapper">
         <div class="container-fluid">
             <div class="row">
-                <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+                <nav id="sidebar" class="col-md-2 d-none d-md-block bg-light sidebar">
                     <div class="sidebar-sticky">
                         {% block sidebar_block %}
                             <ul class="nav flex-column">
@@ -150,7 +151,7 @@
                 </main>
             </div>
         </div>
-
+        </div>
         <!-- Bootstrap core JavaScript -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script>window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.2/assets/js/vendor/jquery-slim.min.js"><\/script>')</script><script src="https://getbootstrap.com/docs/4.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-zDnhMsjVZfS3hiP7oCBRmfjkQC4fzxVxFhBx8Hkz2aZX8gEvA/jsP3eXRCvzTofP" crossorigin="anonymous"></script>
