--- a/templates/cycle_angelo/contact_us.html
+++ b/templates/cycle_angelo/contact_us.html
@@ -20,22 +20,22 @@
   {% block body_block %}
   <div>
     <ul>
-        <li>Adam Templeton</li>
+        <h1><li>Adam Templeton</li></h1>
           <ul>
             <li><a href="mailto:2567437t@student.gla.ac.uk">2567437t@student.gla.ac.uk</a></li>
             <li><a href=https://github.com/Adam-Tem>Adam's Github</a></li>
           </ul>
-        <li>Nile Inel</li>
+        <h1><li>Nile Inel</li></h1>
           <ul>
             <li><a href="mailto:2555713i@student.gla.ac.uk">2555713i@student.gla.ac.uk</a></li>
             <li><a href=https://github.com/Nileinel>Nile's Github</a></li>
           </ul>
-        <li>Lucas Clement</li>
+        <h1><li>Lucas Clement</li></h1>
           <ul>
-            <li><a href="mailto:2745633c@student.gla.ac.uk">mailto:2745633c@student.gla.ac.uk</a></li>
+            <li><a href="mailto:2745633c@student.gla.ac.uk">2745633c@student.gla.ac.uk</a></li>
             <li><a href=https://github.com/lclement27>Lucas's Github</a></li>
           </ul>
-        <li>Hamish Clark</li>
+        <h1><li>Hamish Clark</li></h1>
           <ul>
             <li><a href="mailto:2549100c@student.gla.ac.uk">2549100c@student.gla.ac.uk</a></li>
             <li><a href=https://github.com/Shug1876>Hamish's Github</a></li>
