--- a/static/cycle_angelo_css.css
+++ b/static/cycle_angelo_css.css
@@ -1,9 +1,25 @@
 
 /*For base template*/
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Arabic&family=Open+Sans&display=swap');
 
             body{
+                font-family: 'IBM Plex Sans Arabic', sans-serif;
+                font-family: 'Open Sans', sans-serif;
         		background-color: #aacaf0;
         	}
+
+            p{
+                font-family: 'IBM Plex Sans Arabic', sans-serif;
+                font-size: 1.1em;
+                font-weight: 400;
+                line-height: 1.7em;
+            }
+
+            a, a:hover, a:focus {
+                color: inherit;
+                text-decoration: none;
+                transition: all 0.3s;
+            }
 
             #chain_line{
             	display: block;
@@ -12,41 +28,37 @@
             	background-image: url(images/chain_v2.png);
                 background-repeat: repeat-x;
             }
+
             .wrapper{
+                width: 100%;
                 align-items: stretch;
+                display: flex;
             }
-            .navbar
-            .sidebar {
+
+            #sidebar{
+                width: 250px;
                 position: fixed;
                 top: 0;
-                bottom: 0;
                 left: 0;
-                padding: 58px 0 0; /* Height of navbar */
-                box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-                width: 180px;
-                z-index: 600;
-                background-color: #aacaf0;
+                height: 100vh;
+                z-index: 999;
+                background: #ced4de;
+                color: #aacaf0;
+                transition: all 0.3s;
+            }
+
+            #sidebar.active{
+                margin-left: -250px;
             }
 
             @media (min-width: 768px) {
-                .main {
-            padding-right: 40px;
-            padding-left: 220px; /* 180 + 40 */
+                #sidebar{
+                    margin-left: -250px;
                 }
-            }
 
-            .sidebar .active {
-                border-radius: 5px;
-                box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-            }
-
-            .sidebar-sticky {
-                position: relative;
-                top: 0;
-                height: calc(100vh - 48px);
-                padding-top: 0.5rem;
-                overflow-x: hidden;
-                overflow-y: auto;
+                #sidebar.active{
+                    margin-left: 0;
+                }
             }
 
             #sub_heading{
@@ -55,6 +67,18 @@
             	margin: auto;
                 font-size: 25px;
                 background-color: #aacaf0;
+            }
+
+
+        main {
+          padding: 40px 25px;
+          transition: .5s ease-in-out;
+          width: 100%;
+        }
+
+        #sidebar.active:focus ~ main {
+          margin-left: 17rem;
+          transition-delay: .25s;
             }
 
         #space{
