--- a/static/cycle_angelo_css.css
+++ b/static/cycle_angelo_css.css
@@ -15,10 +15,8 @@
                 line-height: 1.7em;
             }
 
-            a, a:hover, a:focus {
-                color: inherit;
-                text-decoration: none;
-                transition: all 0.3s;
+            #a{
+
             }
 
             #chain_line{
